@startuml
!theme plain
skinparam classAttributeIconSize 0

class TransportVehicle {
  # -name : std::string
  # -distanceKm : double
  # -speedKmh : double
  # -passengerRatePerKm : double
  # -cargoRatePerKmPerKg : double
  ..
  + TransportVehicle()
  + TransportVehicle(name: std::string, distanceKm: double, speedKmh: double, passengerRatePerKm: double, cargoRatePerKmPerKg: double)
  + {abstract} ~TransportVehicle()
  + {abstract} +clone() : TransportVehicle*
  + {abstract} +type_name() : std::string
  + {abstract} +time_in_path_hours() : double
  + +cost_passengers(numPassengers: int) : double
  + +cost_cargo(weightKg: double) : double
  + +input_info_passengers(numPassengers: int) : void
  + +input_info_cargo(weightKg: double) : void
  + +get_name() : const std::string&
  + +get_distance_km() : double
  + +get_speed_kmh() : double
  + +get_passenger_rate_per_km() : double
  + +get_cargo_rate_per_km_per_kg() : double
  + +set_name(n: const std::string&) : void
  + +set_distance_km(d: double) : void
  + +set_speed_kmh(s: double) : void
  + +set_passenger_rate_per_km(r: double) : void
  + +set_cargo_rate_per_km_per_kg(r: double) : void
  + {abstract} +input_info() : void
  + {abstract} +printHeader() : void
  + {abstract} +printTable() : void
  + {abstract} +display(index: int = 0) : void
  ..
  + {friend} operator<<(os: std::ostream&, vehicle: const TransportVehicle&) : std::ostream&
  + {friend} operator>>(is: std::istream&, vehicle: TransportVehicle&) : std::istream&
}

class Car {
  + Car(name: const std::string&, distanceKm: double, speedKmh: double, passengerRatePerKm: double, cargoRatePerKmPerKg: double)
  + +clone() : TransportVehicle*
  + +type_name() : std::string
  + +input_info() : void
  + +printHeader() : void
  + +printTable() : void
  + +display(index: int = 0) : void
}

class Bicycle {
  + Bicycle(name: const std::string&, distanceKm: double, speedKmh: double, passengerRatePerKm: double, cargoRatePerKmPerKg: double)
  + +clone() : TransportVehicle*
  + +type_name() : std::string
  + +input_info() : void
  + +printHeader() : void
  + +printTable() : void
  + +display(index: int = 0) : void
}

class Cart {
  + Cart(name: const std::string&, distanceKm: double, speedKmh: double, passengerRatePerKm: double, cargoRatePerKmPerKg: double)
  + +clone() : TransportVehicle*
  + +type_name() : std::string
  + +input_info() : void
  + +printHeader() : void
  + +printTable() : void
  + +display(index: int = 0) : void
}

TransportVehicle <|-- Car
TransportVehicle <|-- Bicycle
TransportVehicle <|-- Cart

note right of TransportVehicle
  Базовый класс для всех
  транспортных средств.
  Содержит общую логику
  расчета стоимости и времени.
end note

note right of Car
  Класс автомобиля.
  Переопределяет виртуальные
  методы базового класса.
end note

note right of Bicycle
  Класс велосипеда.
  Переопределяет виртуальные
  методы базового класса.
end note

note right of Cart
  Класс телеги.
  Переопределяет виртуальные
  методы базового класса.
end note

@enduml

